[package]
name = "natpl-cli"
version = "0.1.0"
authors = ["tiatomee <tia-github@poto.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "natpl"

[dependencies]
directories = "4.0.1"
natpl = { path = "../natpl" }
natpl-repl = { path = "../natpl-repl" }
owo-colors = "3.0.1"
rustyline = "*"
thiserror = "1.0"
