[package]
name = "natpl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["multi-precision-float"]
multi-precision-float = ["rug"]

[dependencies]
logos = "0.12"
thiserror = "1.0"
fraction = "0.9.0"
ariadne = "0.1.0"

rug = { version = "1.0", optional = true }